# libmlops

./: README.md  pyproject.toml
config/: Jenkinsfile
libmlops/data/: data_loading.py  data_preprocessing.py
libmlops/features/: feature_evaluation.py  feature_selection.py
libmlops/models/: model_evaluation.py
libmlops/utils/: classifier_evaluation.py  features_evaluation.py  regressor_evaluation.py
scripts/: x3_evaluate.py  x7_test.py
tests/unit/data/: test_data_preprocessing.py
tests/unit/features/: test_feature_selection.py
tests/unit/models/: test_model_evaluation.py
tests/unit/utils/: test_utils_classifier_evaluation.py  test_utils_features_evaluation.py  test_utils_regressor_evaluation.py
